$2030 Firefox scrollbar fix

--- a/entrypoints/popup/Popup.module.scss
+++ b/entrypoints/popup/Popup.module.scss
@@ -81,15 +81,51 @@
   }
 
   &:global(.firefox) {
-    scrollbar-color: v.$hover-on-hover-light v.$primary-bg-light;
-
-    @include m.darkMode {
-      scrollbar-color: v.$hover-on-hover-dark v.$primary-bg-dark;
-    }
-
     .pass-screen {
       > div {
         padding: 11px 12px 43px;
+        scrollbar-color: v.$hover-on-hover-light v.$primary-bg-light;
+
+        @include m.darkMode {
+          scrollbar-color: v.$hover-on-hover-dark v.$primary-bg-dark;
+        }
+      }
+    }
+  }
+
+  :global(body.firefox.os-windows) & {
+    .pass-screen {
+      > div {
+        padding: 11px 12px 43px;
+        scrollbar-color: v.$hover-on-hover-light v.$primary-bg-light;
+      }
+    }
+  }
+
+  :global(body.firefox.os-windows.theme-dark) & {
+    .pass-screen {
+      > div {
+        scrollbar-color: v.$hover-on-hover-dark v.$primary-bg-dark;
+      }
+    }
+  }
+
+  @media (prefers-color-scheme: light) {
+    :global(body.firefox.os-windows.theme-unset) & {
+      .pass-screen {
+        > div {
+          scrollbar-color: v.$hover-on-hover-light v.$primary-bg-light;
+        }
+      }
+    }
+  }
+
+  @media (prefers-color-scheme: dark) {
+    :global(body.firefox.os-windows.theme-unset) & {
+      .pass-screen {
+        > div {
+          scrollbar-color: v.$hover-on-hover-dark v.$primary-bg-dark;
+        }
       }
     }
   }
@@ -127,12 +163,12 @@
 
   &.scrollable {
     pointer-events: auto;
+  }
 
-    &:global(.firefox) {
-      .pass-screen {
-        > div {
-          padding-right: 0 !important;
-        }
+  :global(body.firefox:not(.os-windows)) &.scrollable {
+    .pass-screen {
+      > div {
+        padding-right: 0 !important;
       }
     }
   }
